--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -170,9 +170,12 @@
             
             <!-- BEGIN FILTER BY CATEGORY -->
             <h6>By category:</h6>
+            <div class="form-check">
             <div class="checkbox">
-              <label><input type="checkbox" class="icheck"> Villa</label>
-            </div>
+                    <input type="checkbox" class="form-check-input" />
+                   <label class="form-check-label" for="flexCheckDefault" > Villa </label>
+              </div>
+             </div>
             <div class="checkbox">
               <label><input type="checkbox" class="icheck"> Resorts</label>
             </div>
