--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -15,6 +15,7 @@
                 <tr>
                    
                     <th>Item</th>
+                    <th>Status</th>
                     <th>Price</th>
                     <th>SubTotal</th>
                     <th></th>
@@ -26,6 +27,7 @@
                     <tr>
                        
                         <td class="align-middle">@item.Accomodation.Acco_Name</td>
+                        <td class="align-middle">@item.Accomodation.Acco_availability</td>
                         <td class="align-middle">@item.Accomodation.Acco_Price</td> 
                         <td class="align-middle">
                             <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Acco_Id">
@@ -46,11 +48,12 @@
               
 
 
-                @foreach (var item in Model.bookingReserved.FlightBookingItems)
+              @*  @foreach (var item in Model.bookingReserved.FlightBookingItems)
                 {
                     <tr>
 
-                        <td class="align-middle">@item.Flight.Flight_Date</td>
+                        <td class="align-middle">@item.Flight.ToDate</td>
+                        <td class="align-middle">""</td>
                         <td class="align-middle">@item.Flight.Flight_Price</td>
                         <td class="align-middle">
                             <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Flight_Id">
@@ -60,6 +63,30 @@
                                 </svg>
                             </a>
                             <a class="text-success" asp-controller="BookingReserved" asp-action="AddFlightItemToBookingCart" asp-route-id="@item.Flight_Id">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+                }*@
+
+                @foreach (var item in Model.bookingReserved.TransportItems)
+                {
+                    <tr>
+
+                        <td class="align-middle">@item.transport.Destination_point</td>
+                        <td class="align-middle">@item.transport.Transport_Status</td>
+                        <td class="align-mi"></td>
+                        <td class="align-middle">
+                            <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Transport_Id">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
+                                </svg>
+                            </a>
+                            <a class="text-success" asp-controller="BookingReserved" asp-action="AddFlightItemToBookingCart" asp-route-id="@item.Transport_Id">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                                     <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
