--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -180,7 +180,7 @@
                 @Html.DisplayNameFor(model => model.Flight_Departure)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Flight_Date)
+                @Html.DisplayNameFor(model => model.ToDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Flight_Class)
@@ -210,7 +210,7 @@
             </td>
             <td>
 
-                @Html.DisplayFor(modelItem => item.Flight_Date)
+                @Html.DisplayFor(modelItem => item.ToDate)
             </td>
             <td>
               
