--- a/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
@@ -4,18 +4,20 @@
     ViewData["Title"] = "Create";
 }
 
+<
+
+ <h1>List your property Below</h1>
+    
 
 
-<h4>List your property Below</h4>
-<hr />
 <div class="row">
     <div class="col-md-8 off-set-2">
        
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create" class="">
+                <form asp-action="Create">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                   <div class="row">
+                   <div class=" mb-3 row">
                        <div class="col-md-6">
 
                             <div class="form-group">
