--- a/MVCTravelBookingISE/Views/FlightModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Delete.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Flight_Departure)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Date)
+            @Html.DisplayNameFor(model => model.ToDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Date)
+            @Html.DisplayFor(model => model.ToDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Flight_Class)
