--- a/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Flight_Destination)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Date)
+            @Html.DisplayNameFor(model => model.ToDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Date)
+            @Html.DisplayFor(model => model.ToDate)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FlightRule.Flight_Descrip)
