--- a/MVCTravelBookingISE/Views/FlightModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="Flight_Departure" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Flight_Date" class="control-label"></label>
-                <input asp-for="Flight_Date" class="form-control" />
-                <span asp-validation-for="Flight_Date" class="text-danger"></span>
+                <label asp-for="ToDate" class="control-label"></label>
+                <input asp-for="ToDate" class="form-control" />
+                <span asp-validation-for="ToDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Flight_Class" class="control-label"></label>
