--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -118,6 +118,11 @@
             <div class="btn-group">
                 <a class="btn btn-outline-success" asp-controller="Accomodation" asp-action="Index"> Add more items</a>
             </div>
+            <div class="btn-group">
+                <a class="btn btn-outline-success" asp-controller="Trip" 
+                   asp-action="Create"
+                   >Submit booking</a>
+            </div>
         </div>
 
     </div>
