--- a/MVCTravelBookingISE/Views/TransportModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/TransportModels/Details.cshtml
@@ -94,7 +94,14 @@
 
 </div>
 
-
+    <a class="btn btn-primary btn-md ml-0" data-toggle="popover"
+       asp-controller="BookingModels"
+       asp-action="AddTransportItemToBookingCart"
+       asp-route-id="@Model?.Transport_Id">
+        <!-- Full screen modal -->
+        Reserve
+        
+    </a>
 
 <div>
     <a class="btn btn-success" asp-action="#">Add To Booking</a>
