--- a/MVCTravelBookingISE/wwwroot/css/site.css
+++ b/MVCTravelBookingISE/wwwroot/css/site.css
@@ -20,13 +20,14 @@ body {
     margin-bottom: 60px;
     font-family: 'Merriweather Sans', sans-serif;
 }
+/*
 header {
   
    height:100px;
    position:sticky;
    top:0;
    z-index:10;
-}
+}*/
 .navbar{
  
 }
