--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -1,34 +1,45 @@
-﻿@model AccomodationModel
+﻿@model MVCTravelBookingISE.Models.AccomodationModel
 
 @{
     ViewData["Title"] = "Update Accomodation";
 }
 
 
-<h4>Rate the accomodation</h4>
-<hr />
+<head>
+
+    <title>Home Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
+</head>
+<h1>Rate the accomodation</h1>
+
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
-           
+        <form asp-action="Edit" >
+           <div class="form-group">
             <div class="form-group">
-                <label asp-for="Acco_Rate" class="control-label"></label>
+                 
                 <input asp-for="Acco_Rate" class="form-control" />
                 <span asp-validation-for="Acco_Rate" class="text-danger"></span>
             </div>
-          
-        
-           
-            <div class="form-group">
-                <input type="submit" value="Submit Rating" class="btn btn-primary" />
             </div>
+
+            <div class="form-group">
+                <input type="submit" value="Submit rating" class="btn btn-primary float-right" />
+                <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+            </div>
+            
+               
+           
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
