--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -26,7 +26,7 @@
                 {
                     <tr>
                        
-                        <td class="align-middle">@item.Accomodation.Acco_Name</td>
+                        <td class="align-middle">Accomodation: @item.Accomodation.Acco_Name</td>
                         <td class="align-middle">@item.Accomodation.Acco_availability</td>
                         <td class="align-middle">@item.Accomodation.Acco_Price</td> 
                         <td class="align-middle">
@@ -48,12 +48,12 @@
               
 
 
-              @*  @foreach (var item in Model.bookingReserved.FlightBookingItems)
+                @foreach (var item in Model.bookingReserved.FlightBookingItems)
                 {
                     <tr>
 
-                        <td class="align-middle">@item.Flight.ToDate</td>
-                        <td class="align-middle">""</td>
+                        <td class="align-middle">Flight: @item.Flight.Flight_Destination</td>
+                        <td class="align-middle">Available</td>
                         <td class="align-middle">@item.Flight.Flight_Price</td>
                         <td class="align-middle">
                             <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Flight_Id">
@@ -70,15 +70,15 @@
                             </a>
                         </td>
                     </tr>
-                }*@
+                }
 
                 @foreach (var item in Model.bookingReserved.TransportItems)
                 {
                     <tr>
 
-                        <td class="align-middle">@item.transport.Destination_point</td>
+                        <td class="align-middle">Transport : @item.transport.Destination_point</td>
                         <td class="align-middle">@item.transport.Transport_Status</td>
-                        <td class="align-mi"></td>
+                        <td class="align-middle">@item.transport.Transport_Price</td>
                         <td class="align-middle">
                             <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Transport_Id">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
