--- a/MVCTravelBookingISE/Views/Home/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@*
+﻿
+@model IEnumerable<MVCTravelBookingISE.Models.AccomodationModel>
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
