--- a/MVCTravelBookingISE/Views/TransportModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/TransportModels/Details.cshtml
@@ -3,61 +3,37 @@
    
 @{
 }
+<head>
+
+    <title>Home Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/main.css" />
+</head>
 
-<div class="card border-secondary" style="width:700px; margin-top:50px;">
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1517026575980-3e1e2dedeab4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1098&q=80" alt="card image cap" />
-   
-    <div class="card-body">
+
+<h1 class="font-weight-bold text-center dark-grey-text pb-2">Confirm your chosen reserved transport!</h1>
+
+<div class="card text-white bg-dark border-darky" style="width:700px; margin-top:50px;">
+    
+    <div class="card-body text-white">
         
-        <h5 class="card-title">From: @Html.DisplayFor(model => model.Pick_Up_Point) </h5>
-        <h5 class="card-title"> To:  @Html.DisplayFor(model => model.Destination_point)</h5>
-        <p class="card-text"></p>
-        <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked />
-            <strong><label class="form-check-label" for="flexSwitchCheckChecked">Add fuel card</label></strong>
-        </div>
+        <h5 class="card-title text-white">From: @Html.DisplayFor(model => model.Pick_Up_Point) </h5>
+        <h5 class="card-title text-white"> To:  @Html.DisplayFor(model => model.Destination_point)</h5>
+        <p class="card-text"> The transport is 
+            @Html.DisplayFor(model => model.Transport_Status) </p >
+       
         <!-- ID Example -->
-        <button type="button" class="btn btn-outline-secondary btn-xs" data-bs-toggle="modal" data-bs-target="#centralModalSuccess">
-            Why Add a fuel card?
-        </button>
-
+        <p class="text-warning fs-6">   What are fuel card?</p>
+        <p class="text-warning fs-6">
+            Fuel cards allow the purchase of petrol/diesel from a filling station belonging to the network at a lower price, offering significant savings in fuel costs for fleets. They are automatically added with car rentals!
+        </p>
+         
         <!-- Central Modal Medium Success -->
-        <div class="modal fade" id="centralModalSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-             aria-hidden="true">
-            <div class="modal-dialog modal-notify modal-success" role="document">
-                <!--Content-->
-                <div class="modal-content">
-                    <!--Header-->
-                    <div class="modal-header">
-                        <p class="heading lead">Top Up Fuel Card</p>
-
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true" class="white-text">&times;</span>
-                        </button>
-                    </div>
-
-                    <!--Body-->
-                    <div class="modal-body">
-                        <div class="text-center">
-                            <i class="fas fa-check fa-4x mb-3 animated rotateIn"></i>
-                            <p>
-                              By using a fuel card, reward points are automically added to your account! 
-                              You can use your rewards points to get 50% off your next travel booking.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!--Footer-->
-                    <div class="modal-footer justify-content-center">
-                        <a type="button" class="btn btn-success">Get it now <i class="far fa-gem ml-1 text-white"></i></a>
-                        <a type="button" class="btn btn-outline-success waves-effect" data-dismiss="modal">No, thanks</a>
-                    </div>
-                </div>
-                <!--/.Content-->
-            </div>
-        </div>
+       
         <!-- Central Modal Medium Success-->
         <div class="col-sm">
 
@@ -65,7 +41,7 @@
 
             <div class="mb-2">
                 <div class="input-group">
-                    <label for="adults-input" class="input-group-text">From</label>
+                    <label for="adults-input" class="input-group-text">Date Reserved</label>
                     <input type="date"
                            min="0"
                            class="form-control"
@@ -75,38 +51,23 @@
 
             </div>
         </div>
-        <div class="col-sm">
-
-
-
-            <div class="mb-2">
-                <div class="input-group">
-                    <label for="adults-input" class="input-group-text">To</label>
-                    <input type="date"
-                           min="0"
-                           class="form-control"
-                           id="adult-input"
-                           aria-describedby="adults-label" />
-                </div>
-
-            </div>
-    </div>
+ 
 
 </div>
-
-    <a class="btn btn-primary btn-md ml-0" data-toggle="popover"
-       asp-controller="BookingModels"
-       asp-action="AddTransportItemToBookingCart"
-       asp-route-id="@Model?.Transport_Id">
-        <!-- Full screen modal -->
-        Reserve
-        
-    </a>
-
+   
 <div>
-    <a class="btn btn-success" asp-action="#">Add To Booking</a>
+        <a class="btn btn-success" data-toggle="popover"
+           asp-controller="BookingModels"
+           asp-action="AddTransportItemToBookingCart"
+           asp-route-id="@Model?.Transport_Id">
+            <!-- Full screen modal -->
+            Reserve  @Html.DisplayFor(model => model.Transport_Type)
+
+        </a>
+
     <a class="btn btn-primary" asp-action="Index">Back to List</a>
    
 </div>
 <!-- Checked switch -->
 <script src="~/js/main.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
