--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Booking Summary";
 }
 
-<div class="row">
+<div class="row py-5">
     <div class="col-md-8 offset-2">
         <div class="text-center">
             <h2>Your Booking summary</h2>
@@ -115,11 +115,11 @@
 
         </table>
         <div class="text-center">
-            <div class="btn-group">
-                <a class="btn btn-outline-success" asp-controller="Accomodation" asp-action="Index"> Add more items</a>
+            <<div class="btn-group">
+                <a class="btn btn-outline-dark" asp-controller="Accomodation" asp-action="Index"> Add more items</a>
             </div>
             <div class="btn-group">
-                <a class="btn btn-outline-success" asp-controller="Trip" 
+                <a class="btn btn-dark" asp-controller="Trip" 
                    asp-action="Create"
                    >Submit booking</a>
             </div>
