--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -11,15 +11,88 @@
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="~/css/site.css"/>
-  
-   
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500&display=swap" rel="stylesheet">
+
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500&display=swap" rel="stylesheet">
+    
 </head>
 
-<body>
+<body style="margin:0;">
 
+    <header class="py-5 ">
+    <div class="card border-2 ">
+        <div class="card-body ">
+
+            <div class="row">
+                <div class="col">
+                    <div class="mb-2">
+
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+                                    <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z" />
+                                </svg>
+                            </span>
+                            <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="Destination" aria-describedby="origin-label" />
+                            <datalist id="origin-options"></datalist>
+
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+
+
+                <div class="col">
+                    <div class="mb-2">
+
+                        <select class="form-select"
+                                id="travel-class-select"
+                                aria-describedby="travel-class-label">
+                            <option value="ECONOMY">Hotel</option>
+                            <option value="PREMIUM_ECONOMY">Villa</option>
+                            <option value="BUSINESS">Apartment</option>
+                            <option value="FIRST">Flats</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-sm">
+
+
+
+                    <div class="mb-2">
+                        <div class="input-group">
+                            <label for="adults-input" class="input-group-text">Check in</label>
+                            <input type="date"
+                                   min="0"
+                                   class="form-control"
+                                   id="adult-input"
+                                   aria-describedby="adults-label" />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="mb-3">
+                        <a class="btn btn-dark text-white" asp-controller="AccomodationModels" asp-action="Filter" asp-action="Create">Search Accommodation!</a>
+
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </header>
 
   @*  <section id="services " class="view w-100">
       <div class="align-items-center">
@@ -38,6 +111,8 @@
     </div>
     </section>
   *@
+
+  <!--
   <header class="py-3 mb-4 border-bottom shadow bg-dark">
        
     <div class="container-fluid align-items-center d-flex">
@@ -70,7 +145,11 @@
         </div>
 
     </div>
-</header>
+    </header> -->
+
+
+
+    
  <div class="container my-5">
 
 
@@ -78,7 +157,11 @@
         <section class="dark-grey-text text-center">
 
             <strong><h1 class="text-center font-weight-bold mb-4 pb-2 h1">Find your stay!</h1></strong>
-            <p class="text-center text-muted w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur veniam.</p>
+            <p class="text-center text-muted w-responsive mx-auto mb-5">
+
+               
+                        Offering the best booking link for the guests and additional benefits for work travellers
+            </p>
 
             <!-- Grid row -->
             <div class="row">
@@ -87,22 +170,22 @@
                 <div class="col-md-6 mb-4">
 
                     <!-- Card -->
-                    <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Nature/6-col/img%20%2873%29.jpg);">
+                    <div class="card card-image" style="background-image: url(https://images.pexels.com/photos/221284/pexels-photo-221284.jpeg?cs=srgb&dl=pexels-pixabay-221284.jpg&fm=jpg&_gl=1*1dqmyv5*_ga*MjEzMjg1NDM3LjE2Njc5OTk5OTY.*_ga_8JE65Q40S6*MTY2ODA4MjIwNS4zLjEuMTY2ODA4MjIzNi4wLjAuMA..);">
                         <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 px-md-5 rounded">
                             <div>
                                 <h6 class="text-white">
                                     <i class="fas fa-chart-pie"></i>
-                                    <strong> Marketing</strong>
+                                    <strong> Explore Transport</strong>
                                 </h6>
                                 <h3 class="py-3 font-weight-bold text-white">
-                                    <strong>This is card title</strong>
+                                    <strong>Travel conviniently with Unlimited Travels</strong>
                                 </h3>
                                 <p class="pb-3">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
-                                    laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto
-                                    nulla ipsum dignissimos. Odit sed qui, dolorum!
+                                    Explore the best reliable and less costly transportation we have to offer.
                                 </p>
-                                <a class="btn btn-warning btn-rounded btn-md">View project <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                <a asp-controller="TransportModels" asp-action="Index" class="btn btn-warning btn-rounded btn-md">
+                                    Explore
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
 </svg></a>
                             </div>
@@ -116,22 +199,20 @@
                 <div class="col-md-6 mb-4">
 
                     <!-- Card -->
-                    <div class="card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/City/6-col/img%20%2847%29.jpg);">
+                    <div class="card card-image" style="background-image: url(https://images.pexels.com/photos/104826/aircraft-holiday-sun-tourism-104826.jpeg?cs=srgb&dl=pexels-pixabay-104826.jpg&fm=jpg&_gl=1*1a2wgp9*_ga*MjEzMjg1NDM3LjE2Njc5OTk5OTY.*_ga_8JE65Q40S6*MTY2ODA4MjIwNS4zLjEuMTY2ODA4MjQ1OS4wLjAuMA..);">
                         <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4 px-md-5 rounded">
                             <div>
                                 <h6 class="green-tex text-white">
-                                    <i class="fas fa-eye"></i>
-                                    <strong> Entertainment</strong>
+                                    <i class=""></i>
+                                    <strong> Explore Flights</strong>
                                 </h6>
                                 <h3 class="py-3 font-weight-bold text-white">
-                                    <strong>This is card title</strong>
+                                    <strong>Dont worry about whats in the bottom</strong>
                                 </h3>
                                 <p class="pb-3">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat,
-                                    laboriosam, voluptatem, optio vero odio nam sit officia accusamus minus error nisi architecto
-                                    nulla ipsum dignissimos. Odit sed qui, dolorum!
+                                    Explore the most avodable flights from wide range of reliable service providers
                                 </p>
-                                <a class="btn btn-warning btn-rounded btn-md"> View project <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                <a asp-controller="FlightModel" asp-action="Index" class="btn btn-warning btn-rounded btn-md"> Explore <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
 </svg></a>
                             </div>
@@ -141,6 +222,7 @@
 
                 </div>
                 <!-- Grid column -->
+                
 
             </div>
             <!-- Grid row -->
@@ -445,7 +527,7 @@
 </table>*@
     <div class="container z-depth-1 my-5 py-5">
 
-        <!-- Section -->
+        <!-- Section 
         <section>
 
          
@@ -513,7 +595,7 @@
                 </div>
 
             </div>
-        </section>
+        </section>-->
         <!-- Section -->
 
     </div>
