--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,49 +5,71 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+ <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="/css/login.css" /> 
+    <title>Link CSS to HTML</title>
+
+
+<div class="container vh-100 d-flex align-items-center">
+    <div id="innerPage">
+        <div class="row align-items-center justify-content-center">
+           
+           <form id="account" method="post">
+                
+            <div class="col-sm-6 col-xs-12 text-white p-5">
+                <div class="lead">
+                    <h1 class="text-white">Welcome Back</h1>
+                    <p class="fs-6 mb-4">
+                        <small>Login to continue. </small>
+                    </p>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
+                <button type="button" class="btn btn-primary w-100 text-white"><i class="fab fa-google me-2"></i> Sign in with Google</button>
+              
+                <input asp-for="Input.Email" type="Email" class="form-control rounded-0 mb-3" autocomplete="username" aria-required="true placeholder="Enter Email" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+                <input asp-for="Input.Password" class="form-control rounded-0 mb-3" autocomplete="current-password" aria-required="true" type="password" placeholder="Enter Password" />
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+
+                
+                
                 <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+                    
+                    <label asp-for="Input.RememberMe" class="form-label">
+                        <input class="form-check-input" asp-for="Input.RememberMe" />
+                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                    </label>
+
                     </div>
-                </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="btn btn-info mt-4 w-100">Log in</button>
                 </div>
-                <div>
+                 <div>
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" style="text-decoration:none" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <a asp-page="./Register"   style="text-decoration:none" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                        <a id="resend-confirmation"  style="text-decoration:none" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
                     </p>
                 </div>
-            </form>
-        </section>
+           
+        </div>
+        </form>
     </div>
+</div>
+</div>
+
+
+
+
+
+@*
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
@@ -79,7 +101,7 @@
         </section>
     </div>
 </div>
-
+*@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
